--- a/CodeAdmin/App.config
+++ b/CodeAdmin/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="CodeAdmin.Properties.Settings.paco_codeadminConnectionString"
+            connectionString="server=207.180.246.84;password=H9vYFL9lF4XyriTn;persistsecurityinfo=True;user id=paco_codeadmin;database=paco_codeadmin"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
